--- a/activity/activity_list.html
+++ b/activity/activity_list.html
@@ -159,6 +159,8 @@
                         <li><a class="apl40" href="redpacket_list.html">红包统计</a></li>
                         <li><a class="apl40" href="coupon_list.html">加息券统计</a></li>
                         <li><a class="apl40" href="reward_list.html">积分统计</a></li>
+                        <li><a class="apl40" href="sign.html">每日签到</a></li>
+                        <li><a class="apl40" href="extension_analysis.html">推广分析</a></li>
                     </ul>
                 </li>
                 <li>
