--- a/activity/reward_list.html
+++ b/activity/reward_list.html
@@ -155,10 +155,12 @@
                     </a>
                     <ul>
                         <li><a class="apl40" href="activity_list.html">活动统计</a></li>
-                        <li><a class="apl40" href="userdiscount_list.html">用户参与活动统计</a></li>
+                        <li><a class="apl40" href="userdiscount_list.html">用户活动参与统计</a></li>
                         <li><a class="apl40" href="redpacket_list.html">红包统计</a></li>
                         <li><a class="apl40" href="coupon_list.html">加息券统计</a></li>
                         <li><a class="apl40 active" href="reward_list.html">积分统计</a></li>
+                        <li><a class="apl40" href="sign.html">每日签到</a></li>
+                        <li><a class="apl40" href="extension_analysis.html">推广分析</a></li>
                     </ul>
                 </li>
                 <li>
